--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <div class="main">
         <div class="info">
-            <label for="">Search</label>
             <div class="inputbox" style="position:relative;">
                 <input type="search" id="searchBox" placeholder="Search Date/Task Name"
                     onkeyup="showSuggestions(this.value)">
@@ -20,7 +19,6 @@
                 </ul>
             </div>
             <br><br>
-            <label for=""></label>
             <select id="filter" onchange="filterTasks()">
                 <option value="" disabled selected>-- Filter --</option>
                 <option value="All">All</option>
@@ -60,7 +58,7 @@
             </table>
 
         </div>
-
+</div>
         <script src="index.js"></script>
 
 </body>
