Task Add, Show, Delete comleted

--- a/index.html
+++ b/index.html
@@ -12,26 +12,24 @@
     <div class="main">
         <div class="info">
             <div class="inputbox" style="position:relative;">
-                <input type="search" id="searchBox" placeholder="Search Date/Task Name"
-                    onkeyup="showSuggestions(this.value)">
-                <button onclick="searchOK()">OK</button>
+                <input type="search" id="searchBox" placeholder="Search Date/Task Name">
+                <button>OK</button>
                 <ul id="suggestions">
                 </ul>
             </div>
             <br><br>
-            <select id="filter" onchange="filterTasks()">
-                <option value="" disabled selected>-- Filter --</option>
+            <select id="filter">
                 <option value="All">All</option>
                 <option value="Completed">Completed</option>
                 <option value="Pending">Pending</option>
             </select>
             <br><br>
-            <button class="addbtn" onclick="displayTable()">Add</button>
+            <button class="addbtn" onclick="addBtn()">Add</button>
         </div>
 
 
         <div id="popup" class="popup">
-            <div class="popup-content">
+            <form onsubmit="addTask(event)" class="popup-content">
                 <h2>Add Task</h2><br>
                 <label>Task Name:</label><br>
                 <input type="text" id="taskName"><br><br>
@@ -39,9 +37,9 @@
                 <label>Date:</label><br>
                 <input type="date" id="taskDate"><br><br>
 
-                <button onclick="addTask()" class="savebtn">Save</button>
-                <button onclick="closePopup()" class="closebtn">Close</button>
-            </div>
+                <button type="submit" class="savebtn">Save</button>
+                <!-- <button onclick="closePopup()" class="closebtn">Close</button> -->
+            </form>
         </div>
         <div class="tasktable">
             <table border="1">
@@ -60,7 +58,6 @@
         </div>
 </div>
         <script src="index.js"></script>
-
 </body>
 
 </html>
