--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main">
         <div class="info">
-            <div class="inputbox" style="position:relative;">
+            <div class="inputbox">
                 <input type="search" id="searchBox" placeholder="Search Date/Task Name">
                 <button>OK</button>
                 <ul id="suggestions">
@@ -30,19 +30,20 @@
 
         <div id="popup" class="popup">
             <form onsubmit="addTask(event)" class="popup-content">
-                <h2>Add Task</h2><br>
-                <label>Task Name:</label><br>
+                <h2 style="text-align: center;">Add Task</h2><br>
+                <label for="taskName">Task Name:</label><br>
                 <input type="text" id="taskName"><br><br>
 
-                <label>Date:</label><br>
+                <label for="taskDate">Date:</label><br>
                 <input type="date" id="taskDate"><br><br>
 
                 <button type="submit" class="savebtn">Save</button>
                 <!-- <button onclick="closePopup()" class="closebtn">Close</button> -->
             </form>
         </div>
+
         <div class="tasktable">
-            <table border="1">
+            <table>
                 <thead>
                     <tr>
                         <th></th>
@@ -56,8 +57,8 @@
             </table>
 
         </div>
-</div>
-        <script src="index.js"></script>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
